--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <ul class="list-group bg-dark">
                         <li class="list-group-item bg-dark">
                             <div class="form-group" style="display:flex; flex-direction: row; justify-content: center; align-items: center">
-                                <label for="date" style="font-size:small;">Enter Date </label>
+                                <label for="date">Enter Date </label>
                                 <input type="text" class="form-control form-control-sm input-sm"  placeholder="1/10/2010" id="datetime" />
                             </div>
                             <label for="city">Enter a city</label>
